reformated som context